# qwen35-toolkit

./: .gitignore  LICENSE  README.md  _config.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: THIRD_PARTY_LICENSES.md  commands.md  conversion-pipeline.md  convert.md  gguf.md  hardware.md  index.md  models.md  quickstart.md  setup.md  strip.md  tools.md  upload.md  verify.md
docs/.vitepress/: config.ts
model_cards/: README_Qwen3.5-bnb-4bit.md  README_Qwen3.5-text-GGUF.md  README_Qwen3.5-text-bnb-4bit.md  README_Qwen3.5-text.md
qwen35_toolkit/: __init__.py  convert.py  strip.py  verify.py  verify_qwen35.py
qwen35_toolkit/tools/: __init__.py  inspect_safetensors.py  render_mermaid.py  upload.py
