[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen35-toolkit"
version = "0.1.0"
description = "Convert, strip, verify and publish Qwen3.5 models (BNB 4-bit, text-only, GGUF)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

# torch and torchvision must be installed separately before this package:
# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu124
dependencies = [
    "transformers>=5.3.0",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.13.0",
    "safetensors>=0.7.0",
    "huggingface_hub>=1.6.0",
    "Pillow>=12.0.0",
    "numpy>=2.3.5",
]

[project.urls]
Homepage = "https://github.com/techwithsergiu/qwen35-toolkit"

[project.scripts]
qwen35-convert          = "qwen35_toolkit.convert:main"
qwen35-strip            = "qwen35_toolkit.strip:main"
qwen35-verify           = "qwen35_toolkit.verify:main"
qwen35-verify-qwen35    = "qwen35_toolkit.verify_qwen35:main"
qwen35-upload           = "qwen35_toolkit.tools.upload:main"
qwen35-inspect          = "qwen35_toolkit.tools.inspect_safetensors:main"
qwen35-render-mermaid   = "qwen35_toolkit.tools.render_mermaid:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwen35_toolkit*"]
